# misinformation-detector

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
20260320/: PowerShell_transcript.MRAMOTSHA-78723.1lUu07R6.20260320084338.txt  PowerShell_transcript.MRAMOTSHA-78723.5pqfhPRe.20260320084427.txt  PowerShell_transcript.MRAMOTSHA-78723.6oUe3Cfa.20260320084338.txt  PowerShell_transcript.MRAMOTSHA-78723.86saqDR3.20260320084338.txt  PowerShell_transcript.MRAMOTSHA-78723.AF+uPjWc.20260320084339.txt  PowerShell_transcript.MRAMOTSHA-78723.Bbb+4LcE.20260320084402.txt  PowerShell_transcript.MRAMOTSHA-78723.C62zt5Zv.20260320084338.txt  PowerShell_transcript.MRAMOTSHA-78723.G60mdxHw.20260320084402.txt  PowerShell_transcript.MRAMOTSHA-78723.GLKti_25.20260320084443.txt  PowerShell_transcript.MRAMOTSHA-78723.OiJpVYUp.20260320084427.txt  PowerShell_transcript.MRAMOTSHA-78723.QFjCmGDK.20260320084339.txt  PowerShell_transcript.MRAMOTSHA-78723.RCwVCkrg.20260320084401.txt  PowerShell_transcript.MRAMOTSHA-78723.SpuBiUZy.20260320084501.txt  PowerShell_transcript.MRAMOTSHA-78723.Ufy+hvIL.20260320084317.txt  PowerShell_transcript.MRAMOTSHA-78723.V07Rgg2F.20260320084428.txt  PowerShell_transcript.MRAMOTSHA-78723.ZKlB1606.20260320084401.txt  PowerShell_transcript.MRAMOTSHA-78723.cbEPleJJ.20260320084501.txt  PowerShell_transcript.MRAMOTSHA-78723.cxJkaNGw.20260320084317.txt  PowerShell_transcript.MRAMOTSHA-78723.dLnURgV2.20260320084428.txt  PowerShell_transcript.MRAMOTSHA-78723.dMLtKS8v.20260320084402.txt  PowerShell_transcript.MRAMOTSHA-78723.lNKxjvBZ.20260320084501.txt  (+6 more)
(+78 files in other folders)
